--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "yes",
+  "name": "zadanko",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-  	"start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mathew43/zadanie-13.9.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mathew43/zadanie-13.9/issues"
+  },
+  "homepage": "https://github.com/mathew43/zadanie-13.9#readme",
   "dependencies": {
     "colors": "^1.1.2",
     "formidable": "^1.1.1"
